--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --header-bg: rgba(255, 255, 255, 0.6);
+  --header-bg: #ffffff;
   --header-height: 80px;
   --nav-drawer-bg: #e4e4e4;
   --icon-color: black;
@@ -20,7 +20,7 @@
 .dark {
   --background: #0a0a0a;
   --foreground: #ededed;
-  --header-bg: rgba(28, 65, 184, 0.434);
+  --header-bg: #0d1257;
   --header-height: 80px;
   --nav-drawer-bg: #021a6f;
   --icon-color: white;
