--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,7 @@
   --header-height: 80px;
   --nav-drawer-bg: #e4e4e4;
   --icon-color: black;
+  --form-bg: #e1e1e1;
 }
 
 @theme inline {
@@ -20,6 +21,7 @@
 .dark {
   --background: #0a0a0a;
   --foreground: #ededed;
+  --form-bg: transparent;
   --header-bg: #0d1257;
   --header-height: 80px;
   --nav-drawer-bg: #021a6f;
